--- a/data preprocessing/preprocessing.ipynb
+++ b/data preprocessing/preprocessing.ipynb
@@ -28,7 +28,7 @@
     "\n",
     "# Check for data types and missing values\n",
     "print(data.info())\n",
-    "print(data.isnull().sum())\n",
+    "\n",
     "\n",
     "\n",
     "# Count the occurrences of \"unknown\" in each column\n",
@@ -36,6 +36,64 @@
     "\n",
     "# Display the counts of \"unknown\" values\n",
     "print(unknown_counts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Check for null values in each column\n",
+    "null_counts = data.isnull().sum()\n",
+    "\n",
+    "# Display the counts of null values\n",
+    "print(null_counts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Filter out rows with \"unknown\" in the loan and housing columns\n",
+    "data = data[(data['loan'] != 'unknown') & (data['housing'] != 'unknown')]\n",
+    "\n",
+    "# Verify the number of remaining rows\n",
+    "print(f\"Remaining rows after filtering: {len(data)}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "dropped the duration column a it directly affects the prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Drop the 'duration' column\n",
+    "data = data.drop(columns=['duration'])\n",
+    "\n",
+    "# Check the remaining columns\n",
+    "print(f\"Remaining columns: {data.columns}\")"
    ]
   }
  ],
