changed p days column ,class imbalance checked

--- a/data preprocessing/preprocessingPart.ipynb
+++ b/data preprocessing/preprocessingPart.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOEFlEY6HWCQTBCM9ZLCz/0",
+      "authorship_tag": "ABX9TyNimxscjj/Teib7GuWqaGfT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -378,6 +378,58 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Check unique values in 'pdays' before transformation\n",
+        "print(data['pdays'].unique())\n"
+      ],
+      "metadata": {
+        "id": "utifi4xsvZ17"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Convert 'pdays' to a binary column: 1 if previously contacted, 0 if not\n",
+        "data['pdays'] = (data['pdays'] != 999).astype(int)\n",
+        "\n",
+        "# Verify the transformation\n",
+        "print(data['pdays'].value_counts())"
+      ],
+      "metadata": {
+        "id": "sdEh5lNIvcJI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "\n",
+        "# Check the class distribution of the target variable (y)\n",
+        "class_counts = data['y'].value_counts()\n",
+        "\n",
+        "# Plot the class distribution\n",
+        "plt.figure(figsize=(8, 6))\n",
+        "sns.barplot(x=class_counts.index, y=class_counts.values, palette=\"viridis\")\n",
+        "plt.title(\"Class Distribution of Target Variable (y)\", fontsize=16)\n",
+        "plt.xlabel(\"Class\", fontsize=14)\n",
+        "plt.ylabel(\"Count\", fontsize=14)\n",
+        "plt.xticks(fontsize=12)\n",
+        "plt.yticks(fontsize=12)\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "5lWTtw0mvgK0"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
